tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/no-close.stderr
TOML parse error at line 1, column 42
  |
1 | no-ending-quote = "One time, at band camp
  |                                          ^
invalid basic string
